# dialqueue

./: README.md  company_profile.json  pyproject.toml
fixtures/: cases.jsonl  policy.json
outputs/: analysis.json  architecture.json  benchmark.json  dashboard.html  decision_report.md  domain_rubric.json  evidence_packet.md  failure_matrix.md  operator_brief.md  scenario_report.csv  strategy_model.json  trace_graph.mmd
src/call_priority_lab/: strategy.py
src/dialqueue/: domain.py  strategy.py
src/dialqueue.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_workflow.py
