[project]
name = "dialqueue"
version = "0.1.0"
description = "A vertical, NAICS aware call prioritization engine that turns Dialqueue's human callers from 'dial the next row' into a "
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Tarun Aditya Kusupati" }
]
dependencies = []

[project.scripts]
dialqueue = "dialqueue.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.15.0",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
