[project]
name = "call-priority-lab"
version = "0.1.0"
description = "A vertical, NAICS-aware call prioritization engine for evidence-backed daily queues."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Tarun Aditya Kusupati" }
]
dependencies = []

[project.scripts]
call-priority-lab = "call_priority_lab.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.15.0",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
